fixed overflow.

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -159,6 +159,7 @@ body {
 #works {
     background: #fff;
     width: 100vw;
+    max-width: 100vw;
     padding: 8px 32px;
     min-height: 300px;
     & > div:not(.division) {
@@ -250,6 +251,7 @@ body {
 #experience {
     background: #222;
     width: 100vw;
+    max-width: 100vw;
     min-height: 300px;
     padding: 8px 32px 32px 8px;
     color: #fff;
@@ -329,7 +331,7 @@ body {
     padding: 8px 32px;
     padding-bottom: 64px;
     width: 100vw;
-
+    max-width: 100vw;
     .grid {
         width: 100%;
         display: grid;
@@ -385,6 +387,7 @@ body {
     color: #fff;
     padding: 8px 32px 32px 32px;
     width: 100vw;
+    max-width: 100vw;
     .badges {
         display: flex;
         justify-content: center;
@@ -431,6 +434,7 @@ body {
     color: #fff;
     padding: 24px 32px;
     width: 100vw;
+    max-width: 100vw;
     font-size: 0.85rem;
     position: relative;
     a {
